--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,128 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  user-select: none;
 }
 
+/*
+#root {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+*/
+#root {
+  margin-left: 2em;
+}
+
+#DeckPicker {
+  font-size: 150%;
+}
+#DeckPicker button {
+  margin: 0.5em;
+}
+
+.Checkbox input {
+  margin-right: 0.5em;
+  margin-left: 0.5em;
+}
+.reverse-checkbox {
+  font-size: 66%;
+  margin-left: 1em;
+}
+.reverse-checkbox input {
+  margin-right: .5em;
+}
+
+#Flashcard {
+  font-size: 200%;
+}
+
+.language {
+  display: inline-block;
+  width: 7em;
+  /* border: 1px solid red; */
+}
+.word {
+  display: inline-block;
+  /* border: 1px solid red; */
+  width: 7em;
+}
+.word button {
+  font-size: 50%;
+  font-weight: bold;
+  /* color: black; */
+  margin-right: .4em;
+}
+.evaluate {
+  /* border: 1px solid red; */
+}
+.evaluate .language {
+  vertical-align: center;
+}
+
+.smaller {
+  font-size: 50%;
+}
+
+#ScoreTable {
+  margin-top: 1em;
+  width: 30em;
+}
+
+#ScoreTable td.level {
+  font-weight: bold;
+  vertical-align: top;
+  padding-right: 0.5em;
+}
+span.nowrap {
+  white-space: nowrap; 
+}
+
+/*
+td {
+  font-size: 3rem;
+  padding-right: .5em;
+}
+td button {
+  font-size: 2rem;
+}
+*/
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main__wrap {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  padding: 50px 0px;
+  justify-content: center;
+}
+
+.card__box {
+  padding: 50px 10px;
+  border: 10px solid #7fd8e6;
+  border-radius: 12px;
+  background-color: #ddf2f5;
+}
+.row {
+  justify-content: center !important;
+}
+.navbar {
+  justify-content: center !important;
+  background: transparent !important;
+}
+.btn {
+  cursor: pointer !important;
+}
+.badge {
+  width: 70px !important;
 }
